<resources>
    <string name="app_name">MOBDEVE_MaristelaOcampo-MCO</string>

    <string name="logo_description">Fitness Pro Application Main Logo</string>
    <string name="profile_text">Profile</string>
    <string name="username">jmmaristela</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="start_activity">Start</string>
    <string name="home">Home</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="notifications_text">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FitnessPro_text">Fitness Pro</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="start_activity_text">Start Activity</string>
    <string name="start_workout">Start Workout</string>
    <string name="food_tracker">Food Tracker</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="community_feed">Community Feed</string>
    <string name="chat">Chat</string>
    <string name="discover">Discover</string>
    <string name="like">like</string>
    <string name="comment">comment</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="help">Help</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="unit_settings">Unit Settings</string>
    <string name="type_of_workout">Type of Workout:</string>
    <string name="timer">Timer:</string>
    <string name="estimated_calories_burned">Estimated Calories Burned:</string>
    <string name="pedometer_status">Pedometer Status:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="continue_title">Continue</string>
    <string name="question_login">Do not have an account? Sign Up</string>

    <string name="account">Account</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="create_account">Create account</string>
    <string name="question_register">Already have an account? Login here</string>
    <string name="personal_info">Personal Info</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="height">Approximate Height (in cm)</string>
    <string name="weight">Approximate Weight (in kg)</string>
    <string name="gender">Gender</string>

</resources>