<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/main_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/white"
        android:padding="16dp" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/white"
        android:padding="16dp" />

    <Button
        android:id="@+id/btn_notification_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_settings"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/white"
        android:padding="16dp" />

    <Button
        android:id="@+id/btn_unit_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_settings"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/white"
        android:padding="16dp" />
</LinearLayout>
