<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/main_blue" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="205dp"
        android:layout_height="345dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/main_logo" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:backgroundTint="@color/main_orange"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:backgroundTint="@color/main_orange" />

</LinearLayout>
