<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/main_blue"
    tools:context=".fragments.WorkoutFragment">

    <!-- Workout Type Dropdown Menu -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_workout"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <Spinner
        android:id="@+id/spinner_workout_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/main_orange"
        android:padding="8dp" />


    <!-- Timer -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <Chronometer
        android:id="@+id/text_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <!-- Estimated Calories Burned -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estimated_calories_burned"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/text_estimated_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 kcal"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <!-- Pedometer Status -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_status"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/text_pedometer_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Steps: 0"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <!-- Start Button -->
    <Button
        android:id="@+id/button_start_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:backgroundTint="@color/main_orange"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

</LinearLayout>
