<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_blue"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardBackgroundColor="@color/sub_orange"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:fontFamily="sans-serif-black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext_register"
                android:backgroundTint="@color/dark_white"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="15dp"
                android:hint="@string/email_address"
                android:padding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext_register"
                android:backgroundTint="@color/dark_white"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="15dp"
                android:hint="@string/username_title"
                android:padding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext_register"
                android:backgroundTint="@color/dark_white"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="15dp"
                android:hint="@string/password_title"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext_register"
                android:backgroundTint="@color/dark_white"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="15dp"
                android:hint="@string/confirm_password_title"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/createBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/main_blue"
                android:text="@string/create_account"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/question_register"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>