<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_blue"
    tools:context=".fragments.StartActivityFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/main_blue">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/main_logo"
            android:contentDescription="@string/logo_description"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/main_blue">

        <ImageButton
            android:id="@+id/button_start_workout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/icon_start_workout"
            android:contentDescription="@string/start_workout" />

        <ImageButton
            android:id="@+id/button_food_tracker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/icon_food_tracker"
            android:contentDescription="@string/food_tracker" />

        <ImageButton
            android:id="@+id/button_weight_tracker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/icon_weight_tracker"
            android:contentDescription="@string/weight_tracker" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/tab_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main_blue" />

</LinearLayout>
